--- a/ui/pages/onboarding-flow/creation-successful/index.scss
+++ b/ui/pages/onboarding-flow/creation-successful/index.scss
@@ -40,7 +40,9 @@
     button {
       margin-top: 14px;
       max-width: 280px;
-      padding: 16px 0;
+      padding: 16px 120px; //vaival
+      // padding: 16px 0; Real
+
     }
   }
 }
