--- a/ui/pages/onboarding-flow/index.scss
+++ b/ui/pages/onboarding-flow/index.scss
@@ -18,8 +18,8 @@
   z-index: 10;
 }
 .GradientBox {
-  background: radial-gradient(115.77% 115.77% at 50% -18.77%, rgba(255, 22, 203, 0.7) 0%, rgba(20, 5, 51, 0) 100%),
-  linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2));
+  /*background: radial-gradient(115.77% 115.77% at 50% -18.77%, rgba(255, 22, 203, 0.7) 0%, rgba(20, 5, 51, 0) 100%),
+  linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2));*/
   padding: 1px;
   border-radius: 24px;
   overflow: hidden;
@@ -27,13 +27,13 @@
     position: relative;
     border-radius: 24px;
     height: 100%;
-    background-color: #150537;
+    background-color: #23222B;
     padding: 32px 16px;
     @include design-system.screen-sm-min {
       padding: 32px;
     }
     &::before {
-      background: transparent radial-gradient(closest-side at 50% 25%, #ff16cb 0%, #24144600 100%) 0% 0% no-repeat padding-box;
+      background: transparent radial-gradient(closest-side at 50% 25%, #9FC131 0%, #29273100 100%) 0% 0% no-repeat padding-box;
       opacity: 0.7;
       content: "";
       position: absolute;
