--- a/ui/pages/unlock-page/index.scss
+++ b/ui/pages/unlock-page/index.scss
@@ -15,8 +15,8 @@
     align-self: stretch;
     justify-content: center;
     flex: 1 0 auto;
-    /*background: var(--color-background-default);*/
-    background: url("images/bg-unlock.png") no-repeat center top;
+    background: var(--color-background-default);
+    /*background: url("images/bg-unlock.png") no-repeat center top;*/
   }
 
   &__mascot-container {
